* Fix Padrino::Reloader reloading also $LOADED_FEATURES deps
* Fix Double loading of boot.rb in rake tasks. #560
* Fix an issue with haml rendering on rubinius
* Fix an issue with ordered hash on rubinius in our core tests
* Fix issue #556 now we resolve correctly prerequisites of your app
* Enhancement for #556 now is possible to add custom prerequisites to our app

== 0.9.29

* Cleanup SupportLite
* Cleanup Reloader
* Cleanup Padrino::Application
* Cleanup Gemfile generation
* Cleanup Reloader
* Cleanup Application Server
* Improved Reloader
* Decoupled Reloader, Loader, Application
* Fixed Reloader in some extreme scenarios
* Make methods of Padrino::Application that act as Padrino Core
* Fixed error logging
* Added Padrino.clear, useful to clean a Padrino Enviroment
* Improved granularity of our reloader locking and prevent reloading of unnecessary deps
* Use Sequel::Model.db= instead of DB= because is more simple change on the fly connections
* Added compatibility with CouchRest::Model 1.1+
* Cleanup support lite and improved compatiblity with jruby
* Expose Padrino::Application.load_paths
* Added a new method to load custom app dependencies
* Added a new format helper 'truncate_words' [Thanks cearls!]
* Fixes support for local vars passing in render
* Rake 0.9 and 0.8.7 compat
* Use Rack::Flash as Rails do
* Fix a deprecation with model_name.human

== 0.9.28

* Fixed couchrest Account Model
* Generate SystemTimer for Mongoid only if Ruby 1.8 [Thanks to RoryO]
* Generate SystemTimer for Mongomapper only if Ruby 1.8
* Add `padrino s` as alias for `padrino start`
* Fixed Gemfile for couchrest
* Updated Gemfile for mongoid
* Fix a possible loop in require_dependencies
* Added padrino rake gen useful to create a Rakefile to handle for example with heroku

== 0.9.27

* Use sass gem, because now is separated from haml
* Escape regex in our reloader
* Use CouchRest::Model instead of CouchRest::ExtendedDocument [Thanks Burgestrand!]