@@ -12,6 +12,7 @@
 * Fix an issue with ordered hash on rubinius in our core tests
 * Fix issue #556 now we resolve correctly prerequisites of your app
 * Enhancement for #556 now is possible to add custom prerequisites to our app
+* Change move Padrino.current_controller in public apis
 
 == 0.9.29
 
